transmission/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
      - name: transmission
        image: linuxserver/transmission:version-3.00-r8
        imagePullPolicy: Always
        ports:
        - containerPort: 9091
        - containerPort: 51413
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: transmission-config
      - nfs:
          server: fs2.oneill.net
          path: /volume2/shared/downloads
        name: downloads
